# scraping_cnpj_gov

./: .gitignore  README.md  exemplo.env  gov_cnpj.db  mkdocs.yml  pyproject.toml  schema_db.architect  schema_db.architect~
.github/workflows/: main.yml
app/: append.py  create_db_duckdb.py  create_tables_duckdb.py  download.py  duckduck.py  empresa_schema.py  enconding.py  etl.py  extract_and_unzip.py  main.py  models.py  pipeline.py  queryduck.py  schemas.py  transform.py  unzip.py
sql/: consulta.sql
test/: test_funcao_download.py
