[tool.poetry]
name = "screaping-cnpj-gov"
version = "0.1.0"
description = "Projeto com o intuito de fazer webscreaping de dados publicos de cnpj"
authors = ["Claudio Pontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
requests = "^2.31.0"
wget = "^3.2"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
