[tool.poetry]
name = "screaping-cnpj-gov"
version = "0.1.0"
description = ""
authors = ["Claudio Pontes <claudiohpontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.1"
wget = "^3.2"
tqdm = "^4.66.2"
duckdb = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
